--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,18 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     properties.hibernate.dialect: org.hibernate.dialect.H2Dialect
 
+  cache:
+    type: redis
+    redis:
+      host: localhost
+      port: 6379
+    ttl:
+      access: 60
+      refresh: 1210000
+
+  main:
+    allow-bean-definition-overriding: true
+
   h2:
     console:
       enabled: true
