--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,20 +11,8 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+        dialect: org.hibernate.dialect.H2Dialect
     database-platform: org.hibernate.dialect.H2Dialect
-    properties.hibernate.dialect: org.hibernate.dialect.H2Dialect
-
-  cache:
-    type: redis
-    redis:
-      host: localhost
-      port: 6379
-    ttl:
-      access: 60
-      refresh: 1210000
-
-  main:
-    allow-bean-definition-overriding: true
 
   h2:
     console:
@@ -33,3 +21,10 @@ spring:
 
   config:
     import: secret.yml
+
+  cache:
+    type: redis
+
+
+
+
