--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,7 +47,10 @@ spring:
       on-profile: prod
 
   datasource:
-    url: jdbc:h2:~/npec
+    url: jdbc:postgresql://5432ec2-43-200-163-205.ap-northeast-2.compute.amazonaws.com
+    driver-class-name: org.postgresql.Driver
+    username:
+    password:
 
   jpa:
     hibernate:
