bulk insert Member
(cherry picked from commit 3fad69f033c7206c502bde3e5cdb262466edc0e8)

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'org.postgresql:postgresql'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
@@ -56,6 +57,11 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.rest-assured:rest-assured:5.3.0'
+}
+
+test {
+    exclude("com/mogak/npec/board/application/BoardBulkInsertTest.class")
+    exclude("com/mogak/npec/fixture/**")
 }
 
 tasks.named('test') {
