--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,10 @@ spring:
     active: local
 
   datasource:
-    url: jdbc:h2:~/npec
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/npec
+    username: postgres
+    password: 1234
   jpa:
     hibernate:
       ddl-auto: create
@@ -14,8 +14,6 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
-        dialect: org.hibernate.dialect.H2Dialect
-    database-platform: org.hibernate.dialect.H2Dialect
 
   h2:
     console:
