--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,26 +1,19 @@
 spring:
   profiles:
-    default: test
+    active: local
+  config:
+    import: secret.yml
 
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    dialect: org.hibernate.dialect.MySQL8Dialect
   jpa:
-    hibernate:
-      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
         show_sql: true
-
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-
-  config:
-    import: secret.yml
-
   cache:
     type: redis
-
 ---
 spring:
   config:
@@ -28,26 +21,7 @@ spring:
       on-profile: local
 
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/npec
-    username: postgres
-    password: 1234
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-
----
-spring:
-  config:
-    activate:
-      on-profile: prod
-  datasource:
-    url: jdbc:h2:~/npec
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-
+    url: jdbc:mysql://127.0.0.1:3306/npec
   jpa:
     hibernate:
       ddl-auto: update
@@ -56,16 +30,9 @@ spring:
   config:
     activate:
       on-profile: prod
-
-  datasource:
-    url: jdbc:postgresql://ec2-3-39-23-252.ap-northeast-2.compute.amazonaws.com:5432/npecdb
-    driver-class-name: org.postgresql.Driver
-    username: postgres
-    password: 1234
-
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
 ---
 spring:
   config:
@@ -73,10 +40,7 @@ spring:
       on-profile: test
 
   datasource:
-    url: jdbc:h2:~/npec
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:mysql://127.0.0.1:3306/npectest
 
   jpa:
     hibernate:
