tomcat thread 설정 200

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,12 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+
+server:
+  tomcat:
+    threads:
+      min-spare: 200
+      max: 200
 ---
 spring:
   config:
